Rebase breadcrumb fix, sort single section page and experiment with detected updates to served essential css file only.

--- a/less/essential/settings/breadcrumb.less
+++ b/less/essential/settings/breadcrumb.less
@@ -34,9 +34,17 @@
     li:after {
       border-left-color: ~"[[setting:themecolor]]";
     }
-    .first {
+    li.first {
+      a:before {
+        color: ~"[[setting:themeiconcolor]]";
+      }
       a:hover:before {
         color: ~"[[setting:themecolor]]";
+      }
+      &:hover {
+        a:before {
+            color: ~"[[setting:themecolor]]";
+        }
       }
     }
     li:hover {
