--- a/style/essential-rtl.css
+++ b/style/essential-rtl.css
@@ -18932,22 +18932,21 @@ body .chooserdialogue .moodle-dialogue-wrap .moodle-dialogue-bd {
   margin-right: 1px;
 }
 
-.breadcrumb-nav ul.breadcrumb.style1 .first {
+.breadcrumb-nav ul.breadcrumb.style1 li.first {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.breadcrumb-nav ul.breadcrumb.style1 .first a {
+.breadcrumb-nav ul.breadcrumb.style1 li.first a {
   margin-right: -25px;
 }
 
-.breadcrumb-nav ul.breadcrumb.style1 .first a:before {
+.breadcrumb-nav ul.breadcrumb.style1 li.first a:before {
   display: inline-block;
   font-family: FontAwesome;
   content: "\f015 ";
   margin-left: 5px;
   text-decoration: none;
-  color: #fff;
 }
 
 .breadcrumb-nav ul.breadcrumb.style1 .last:before,
