--- a/style/essential.css
+++ b/style/essential.css
@@ -15810,20 +15810,19 @@ body .chooserdialogue .moodle-dialogue-wrap .moodle-dialogue-bd {
   border-left: 30px solid white;
   margin-left: 1px;
 }
-.breadcrumb-nav ul.breadcrumb.style1 .first {
+.breadcrumb-nav ul.breadcrumb.style1 li.first {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-.breadcrumb-nav ul.breadcrumb.style1 .first a {
+.breadcrumb-nav ul.breadcrumb.style1 li.first a {
   margin-left: -25px;
 }
-.breadcrumb-nav ul.breadcrumb.style1 .first a:before {
+.breadcrumb-nav ul.breadcrumb.style1 li.first a:before {
   display: inline-block;
   font-family: FontAwesome;
   content: "\f015 ";
   margin-right: 5px;
   text-decoration: none;
-  color: #fff;
 }
 .breadcrumb-nav ul.breadcrumb.style1 .last:before,
 .breadcrumb-nav ul.breadcrumb.style1 .last:after,
