Work through all additional Moodle RTL to eliminate what is considered to be redundant.  A few fixes and the 'incourse' layout being 'columns2' - noticed when looking at a book resource.

--- a/less/moodle/rtl/question.less
+++ b/less/moodle/rtl/question.less
@@ -2,8 +2,6 @@
 /** Overide for RTL layout **/
 .dir-rtl #chooseqtype .instruction,
 .dir-rtl #chooseqtype .qtypesummary {
-  right: 60%;
-  left: 0%;
   border-left: 0;
-  border-right: 1px solid grey;
+  border-right: 1px solid grey;  // Really not sure about this as cannot find a definition that sets the border colour in LTR.
 }
