--- a/less/moodle/rtl/core.less
+++ b/less/moodle/rtl/core.less
@@ -11,11 +11,6 @@
   text-align: right;
 }
 
-.dir-rtl img.iconhelp, .dir-rtl .helplink img {
-  padding-right: 3px;
-  padding-left: 0;
-}
-
 .dir-rtl .accesshide {
   top: -30000px;
   left: auto;
@@ -41,7 +36,7 @@
 .dir-rtl.jschooser .choosercontainer #chooseform .typesummary {
   left: 0;
   right: 18.5em;
-  border-right: 1px solid grey;
+  border-right: 1px solid grey;  // Really not sure about this as cannot find a definition that sets the border colour in LTR.
 }
 
 .dir-rtl {
@@ -51,6 +46,10 @@
     margin-left: 0;
     margin-right: 25px;
   }
+}
+
+.dir-rtl.jschooser .choosercontainer #chooseform .alloptions {
+  max-width: 18.3em;
 }
 
 /** Fix YUI 2 Treeview for Right to left languages. **/
